--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -10,12 +10,64 @@
 // }
 
 @font-face {
+  font-family: "Alumni Sans";
+  src: url("../fonts/alumnisans-semibold.woff2") format("woff2"),
+    url("../fonts/alumnisans-semibold.woff") format("woff");
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Alumni Sans";
+  src: url("../fonts/alumnisans-bold.woff2") format("woff2"),
+    url("../fonts/alumnisans-bold.woff") format("woff");
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Alumni Sans";
+  src: url("../fonts/alumnisans-extrabold.woff2") format("woff2"),
+    url("../fonts/alumnisans-extrabold.woff") format("woff");
+  font-style: normal;
+  font-weight: 800;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Alumni Sans";
+  src: url("../fonts/alumnisans-black.woff2") format("woff2"),
+    url("../fonts/alumnisans-black.woff") format("woff");
+  font-style: normal;
+  font-weight: 900;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Roboto Condensed";
+  src: url("../fonts/robotocondensed-light.woff2") format("woff2"),
+    url("../fonts/robotocondensed-light.woff") format("woff");
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Roboto Condensed";
+  src: url("../fonts/robotocondensed-regular.woff2") format("woff2"),
+    url("../../fonts/robotocondensed-regular.woff") format("woff");
   font-style: normal;
   font-weight: 400;
-  font-family: "";
-
   font-display: swap;
-  src:
-    url("../fonts/.woff2") format("woff2"),
-    url("../fonts/.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Roboto Condensed";
+  src: url("../fonts/robotocondensed-bold.woff2") format("woff2"),
+    url("../fonts/robotocondensed-bold.woff") format("woff");
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
 }
