--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -9,6 +9,7 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
+  scroll-behavior: smooth;
 }
 
 html {
@@ -30,6 +31,7 @@ html {
 body {
   width: 100%;
   height: 100%;
+  min-width: 320px;
 
   background-color: $color-default-white;
 }
