делает главный блок

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -5,6 +5,9 @@
 
 $color-default-black: #000000;
 $color-default-white: #ffffff;
+$color-sapphire: #102654;
+$color-dark-cerulean: #14367a;
+$color-of-torch-red: #ed0233;
 $color-transparent:   rgba(255, 255, 255, 0);
 
 // Project palette
@@ -36,27 +39,28 @@ $ff-alumnisans: "Alumni Sans", "Arial", sans-serif;
 // Animation
 // ---------------------------------
 
-$tf-default:                        ease;
-$trans-default:                     0.3s $tf-default;
+$tf-default: ease;
+$trans-default: 0.3s $tf-default;
 
 // если требуется изинг отличный от $tf-default, то переменную называем не цифрой
-$trans-modal:                       0.6s cubic-bezier(0.55, 0, 0.1, 1);
+$trans-modal: 0.6s cubic-bezier(0.55, 0, 0.1, 1);
 
-$trans-600:                         0.6s $tf-default;
+$trans-600: 0.6s $tf-default;
 
 // Viewports
 // ---------------------------------
 
-$vp-320:                            320px;
-$vp-375:                            375px;
-$vp-768:                            768px;
-$vp-1024:                           1024px;
-$vp-1280:                           1280px;
-$vp-1440:                           1440px;
-$vp-1920:                           1920px;
+$vp-320: 320px;
+$vp-375: 375px;
+$vp-768: 768px;
+$vp-1024: 1024px;
+$vp-1200: 1200px;
+$vp-1280: 1280px;
+$vp-1440: 1440px;
+$vp-1920: 1920px;
 
 // Retina
 // ---------------------------------
 
-$retina-dpi:                        144dpi;
-$retina-dppx:                       1.5dppx;
+$retina-dpi:  144dpi;
+$retina-dppx: 1.5dppx;
