--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,7 +19,10 @@
 // ---------------------------------
 
 @import "blocks/btn";
-@import "blocks/modal";
+@import "blocks/main-header";
+@import "blocks/main-nav";
+@import "blocks/logo";
+@import "blocks/nav-description";
 
 // ---------------------------------
 
