делает тренашер десктоп но есть ошибки  консоли

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -8,6 +8,7 @@ $color-default-white: #ffffff;
 $color-sapphire: #102654;
 $color-dark-cerulean: #14367a;
 $color-of-torch-red: #ed0233;
+$color-spindle: #b6bdcc;
 $color-transparent:   rgba(255, 255, 255, 0);
 
 // Project palette
