--- a/source/sass/blocks/nav-description.scss
+++ b/source/sass/blocks/nav-description.scss
@@ -121,6 +121,16 @@
   font-size: 14px;
   line-height: 150%;
   color: $color-default-white;
+
+  &:hover,
+  &:active,
+  &:focus {
+    color: $color-of-torch-red;
+  }
+
+  &:focus {
+    outline: none;
+  }
 }
 
 .nav-description__btn {
