--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,6 +23,7 @@
 @import "blocks/main-nav";
 @import "blocks/logo";
 @import "blocks/nav-description";
+@import "blocks/gum";
 
 // ---------------------------------
 
