--- a/source/sass/blocks/gum.scss
+++ b/source/sass/blocks/gum.scss
@@ -15,10 +15,13 @@
   @include vp-1199 {
     flex-direction: column;
     align-items: center;
+    padding-top: 100px;
+    padding-bottom: 100px;
   }
 
   @include vp-767 {
     gap: 33px;
+    padding: 63px 0;
   }
 }
 
@@ -32,6 +35,7 @@
     max-width: none;
     padding: 0;
     text-align: center;
+    margin: 0;
   }
 
   @include vp-767 {
@@ -123,12 +127,20 @@
     max-width: none;
     width: 100%;
     margin: 0;
-    aspect-ratio: 678/345;
   }
 }
 
 .gum__image img {
   width: 100%;
+
+  @include vp-1199 {
+    aspect-ratio: 678/345;
+  }
+
+  @include vp-767 {
+    aspect-ratio: 320/313;
+    object-fit: cover;
+  }
 }
 
 .gum__video {
@@ -141,7 +153,6 @@
 
   @include vp-1199 {
     margin: -84px 0 0 0px;
-    //padding: 0;
   }
 
   @include vp-767 {
@@ -151,11 +162,21 @@
 
 .gum__video iframe {
   max-width: 364px;
-  height: 228px;
+  max-height: 228px;
+
+  @include vp-1199 {
+    max-width: 266px;
+    max-height: 167px;
+  }
+
+  @include vp-767 {
+    aspect-ratio: 320/313;
+    max-width: 100%;
+    width: 100%;
+  }
 }
 
 .gum__video-background {
-  //position: absolute;
   position: relative;
 
   &::before {
@@ -167,25 +188,40 @@
     bottom: 0;
     left: 0;
   }
+
+  @include vp-767 {
+    width: inherit;
+  }
 }
 
 .gum__video-player {
   display: none;
-  aspect-ratio: 364/228;
-  object-fit: cover;
+  //aspect-ratio: 364/228;
+  //object-fit: cover;
 
-  @include vp-1199 {
-    aspect-ratio: 266/167;
-  }
+  //@include vp-1199 {
+    //aspect-ratio: 266/167;
+  //}
 
-  @include vp-767 {
-    aspect-ratio: 320/167;
-  }
+  //@include vp-767 {
+    //aspect-ratio: 320/167;
+  //}
 }
 
 .gum__video-poster {
   width: 100%;
   height: auto;
+
+  @include vp-1199 {
+    max-width: 266px;
+    max-height: 167px;
+  }
+
+  @include vp-767 {
+    max-width: 100%;
+    max-height: 100%;
+    aspect-ratio: 320/167;
+  }
 }
 
 .gum__video-btn {
