--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,6 +24,9 @@
 @import "blocks/logo";
 @import "blocks/nav-description";
 @import "blocks/gum";
+@import "blocks/subscriptions";
+@import "blocks/tabs";
+@import "blocks/card";
 
 // ---------------------------------
 
