--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -8,6 +8,7 @@
   background-color: $color-neon-blue;
   border: none;
   cursor: pointer;
+  user-select: none;
 
   transition: opacity $trans-default;
 
