--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -9,6 +9,14 @@ $color-sapphire: #102654;
 $color-dark-cerulean: #14367a;
 $color-of-torch-red: #ed0233;
 $color-spindle: #b6bdcc;
+$color-ghost-white: #f8f9fc;
+$color-crimson: #d10a42;
+$color-chambray: #495a7d;
+$color-egyptian-blue: #103aae;
+$color-whisper: #e8e8e8;
+$color-grey-opacity02: rgba(120, 120, 120, 0.2);
+$color-tabs: rgba(16, 38, 84, 0.5);
+$color-filter: rgba(20, 54, 122, 0.5);
 $color-transparent:   rgba(255, 255, 255, 0);
 
 // Project palette
