--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -1,6 +1,7 @@
 .btn {
   display: inline-flex;
   vertical-align: middle;
+  justify-content: center;
   padding: 10px 20px;
 
   color: $color-default-white;
