--- a/source/sass/blocks/gum.scss
+++ b/source/sass/blocks/gum.scss
@@ -164,8 +164,11 @@
   max-height: 228px;
 
   @include vp-1199 {
-    max-width: 266px;
-    max-height: 167px;
+    max-width: 100%;
+    max-height: 100%;
+    width: 39.2%;
+    height: 21.4vw;
+    margin-bottom: 0.3vw;
   }
 
   @include vp-767 {
@@ -173,6 +176,7 @@
     height: 53vw;
     max-width: 100%;
     width: 100%;
+    margin-bottom: -0.8vw;
   }
 }
 
@@ -203,14 +207,17 @@
   height: auto;
 
   @include vp-1199 {
-    max-width: 266px;
-    max-height: 167px;
+    aspect-ratio: 266/167;
+    max-width: 100%;
+    max-height: 100%;
+    height: 21.7vw;
   }
 
   @include vp-767 {
     max-width: 100%;
     max-height: 100%;
     aspect-ratio: 320/167;
+    height: auto;
   }
 }
 
