--- a/source/sass/blocks/nav-description.scss
+++ b/source/sass/blocks/nav-description.scss
@@ -49,6 +49,7 @@
   gap: 10px;
   position: relative;
   padding-left: 0;
+  flex-wrap: wrap;
 
   @include vp-767 {
     padding: 12px 0 0 10px;
@@ -146,7 +147,6 @@
   background: transparent;
   max-width: 233px;
   align-self: flex-end;
-  justify-content: center;
 
   &:hover,
   &:focus,
@@ -164,9 +164,9 @@
   }
 
   @include vp-1199 {
-    margin-top: 35px;
+    margin-top: 37px;
     margin-left: auto;
-    padding: 21px 30px;
+    padding: 21px 30px 19px;
   }
 
   @include vp-767 {
