--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -17,8 +17,8 @@ html {
   font-weight: 400;
   font-size: $fz-default;
   line-height: 24px;
-  font-family: $ff-placeholder;
-  color: $color-default-black;
+  font-family: $ff-robotocondensed;
+  color: $color-sapphire;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
