--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,6 +27,7 @@
 @import "blocks/subscriptions";
 @import "blocks/tabs";
 @import "blocks/card";
+@import "blocks/promo";
 
 // ---------------------------------
 
