делает блок тренеры

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,7 +3,7 @@
 
 @import "vendor/normalize";
 // Swiper 7.4.1
-// @import "vendor/swiper";
+@import "vendor/swiper";
 
 // Global
 // ---------------------------------
@@ -28,6 +28,13 @@
 @import "blocks/tabs";
 @import "blocks/card";
 @import "blocks/promo";
+
+
+//@import "blocks/trainer-card";
+@import "blocks/trainers";
+@import "blocks/slider-control";
+
+//@import "blocks/coach";
 
 // ---------------------------------
 
