--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -14,6 +14,7 @@ $color-crimson: #d10a42;
 $color-chambray: #495a7d;
 $color-egyptian-blue: #103aae;
 $color-whisper: #e8e8e8;
+$color-dark-gray: #afafaf;
 $color-grey-opacity02: rgba(120, 120, 120, 0.2);
 $color-tabs: rgba(16, 38, 84, 0.5);
 $color-filter: rgba(20, 54, 122, 0.5);
