--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -7,7 +7,7 @@
   }
 
   @include vp-767 {
-    padding: 70px 0;
+    padding: 70px 0 64px;
   }
 }
 
@@ -85,7 +85,7 @@
   }
 
   @include vp-767 {
-    margin: 5px 0 0 0;
+    margin: 6px 0 0 0;
     padding: 0;
   }
 }
@@ -123,12 +123,10 @@
     padding: 0 0 1px 0;
   }
 
-
   @include vp-767 {
-margin: 0 0 -4px;
+    margin: 0 0 -4px;
     padding: 0 0 0px;
   }
-
 }
 
 .promo__date--first {
@@ -137,8 +135,6 @@ margin: 0 0 -4px;
   @include vp-1199 {
     max-width: 42px;
   }
-
-
 }
 
 .promo__item .promo__date--second {
@@ -241,7 +237,7 @@ margin: 0 0 -4px;
   }
 
   @include vp-767 {
-    margin: 32px 0 0 0;
+    margin: 30px 0 0 0;
     padding: 13px 16px;
   }
 }
@@ -261,7 +257,7 @@ margin: 0 0 -4px;
 
 .promo__image {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
   aspect-ratio: 660/500;
 
@@ -270,6 +266,6 @@ margin: 0 0 -4px;
   }
 
   @include vp-767 {
-    aspect-ratio: 290/292;
+    aspect-ratio: 290/290;
   }
 }
