--- a/source/sass/blocks/trainers.scss
+++ b/source/sass/blocks/trainers.scss
@@ -44,6 +44,21 @@
   width: 100%;
 }
 
+.trainers__slider--not-js .trainers__list {
+  display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 40px;
+
+    @include vp-1199 {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 30px;
+    }
+
+    @include vp-767 {
+      grid-template-columns: 1fr;
+    }
+}
+
 .trainers__list {
   margin: 0;
   padding: 0;
@@ -202,6 +217,10 @@
     left: 5px;
     right: 5px;
   }
+}
+
+.trainers__slider-control--not-js {
+  display: none;
 }
 
 .trainers__image {
