делает приемущества десктоп

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -30,6 +30,7 @@
 @import "blocks/promo";
 @import "blocks/trainers";
 @import "blocks/slider-control";
+@import "blocks/features";
 
 // ---------------------------------
 
