--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -15,6 +15,8 @@ $color-chambray: #495a7d;
 $color-egyptian-blue: #103aae;
 $color-whisper: #e8e8e8;
 $color-dark-gray: #afafaf;
+$color-resolution-blue: #1c3374;
+$color-persian-blue: #2e35ac;
 $color-grey-opacity02: rgba(120, 120, 120, 0.2);
 $color-tabs: rgba(16, 38, 84, 0.5);
 $color-filter: rgba(20, 54, 122, 0.5);
