--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -31,6 +31,7 @@
 @import "blocks/trainers";
 @import "blocks/slider-control";
 @import "blocks/features";
+@import "blocks/stocks";
 
 // ---------------------------------
 
