--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,6 +11,7 @@ $color-of-torch-red: #ed0233;
 $color-spindle: #b6bdcc;
 $color-ghost-white: #f8f9fc;
 $color-crimson: #d10a42;
+$color-crimson02: rgba(209, 10, 66, 0.2);
 $color-chambray: #495a7d;
 $color-egyptian-blue: #103aae;
 $color-whisper: #e8e8e8;
