--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -17,6 +17,7 @@ $color-egyptian-blue: #103aae;
 $color-whisper: #e8e8e8;
 $color-dark-gray: #afafaf;
 $color-resolution-blue: #1c3374;
+$color-resolution-blue02: rgb(28, 51, 116, 0.2);
 $color-persian-blue: #2e35ac;
 $color-grey-opacity02: rgba(120, 120, 120, 0.2);
 $color-tabs: rgba(16, 38, 84, 0.5);
