--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,6 +1,6 @@
 .features {
   padding-top: 145px;
-  padding-bottom: 61px;
+  padding-bottom: 33px;
 
   background-color: $color-ghost-white;
 
@@ -42,22 +42,23 @@
     margin: 0 18px 0px 0;
 
     font-size: 32px;
-line-height: 38px;
+    line-height: 38px;
   }
 }
 
 .features__list {
+  margin: 0 auto;
+  padding: 0;
+
   display: grid;
   grid-template-columns: 1fr 240px 1fr;
   gap: 51px 60px;
   max-width: 1040px;
-  margin: 0 auto;
-  padding: 0;
 
   @include vp-1199 {
+    padding: 27px 0 0 0;
     grid-template-columns: repeat(2, 1fr);
     gap: 27px;
-    padding-top: 27px;
   }
 
   @include vp-767 {
@@ -67,14 +68,14 @@ line-height: 38px;
 }
 
 .features__item {
+  padding: 0 0 23px;
+
   display: grid;
   grid-template-columns: auto 1fr;
   gap: 30px;
   grid-column: -2/-1;
-  padding: 0 0 23px;
 
   color: $color-sapphire;
-
   border-bottom: 2px solid $color-crimson02;
 
   @include vp-1199 {
@@ -84,8 +85,8 @@ line-height: 38px;
   }
 
   @include vp-767 {
-    display: block;
     padding: 0 46px;
+    display: block;
 
     text-align: center;
   }
@@ -125,7 +126,7 @@ line-height: 38px;
   line-height: 21px;
   color: $color-persian-blue;
 
-  &:first-child {
+  &:nth-child(3n-2) {
     font-weight: 700;
     font-size: 71px;
     line-height: 107px;
@@ -143,7 +144,7 @@ line-height: 38px;
 }
 
 .features__number span + span {
-  margin-top: -21px;
+  margin: -21px 0 0 0;
 }
 
 .features__content h3 {
@@ -174,26 +175,24 @@ line-height: 38px;
 }
 
 .features__item--center {
+  margin: 28px 0 59px;
+  padding: 36px 20px 56px;
+
   display: block;
   grid-column: 2/3;
-  margin-top: 28px;
-  margin-bottom: 59px;
-  padding: 36px 20px 56px;
+  grid-row: 1 / span 2;
 
   text-align: center;
   color: $color-default-white;
-
   background-color: $color-resolution-blue;
 
-  grid-row: 1 / span 2;
-
   @include vp-1199 {
-    grid-column: 1/-1;
-    width: 100%;
-    max-width: 442px;
     margin: 17px auto 0;
     padding: 15px 115px 37px;
+    width: 100%;
+    max-width: 442px;
 
+    grid-column: 1/-1;
     grid-row: 2/3;
   }
 
@@ -219,12 +218,11 @@ line-height: 38px;
     line-height: 33px;
   }
 
-  &:first-child {
+  &:nth-child(3n-2) {
     font-weight: 700;
-  font-size: 74px;
-  line-height: 111px;
-  color: $color-default-white;
-
+    font-size: 74px;
+    line-height: 111px;
+    color: $color-default-white;
 
     @include vp-1199 {
       font-size: 74px;
@@ -239,17 +237,14 @@ line-height: 38px;
 }
 
 .features__item--center span + span {
-  margin-top: -16px;
-  margin-bottom: 32px;
+  margin: -16px 0 32px;
 
   @include vp-1199 {
-    margin-top: -21px;
-    margin-bottom: 16px;
+    margin: -21px 0 16px;
   }
 
   @include vp-767 {
-    margin-top: -25px;
-    margin-bottom: 9px;
+    margin: -25px 0 9px;
   }
 }
 
