--- a/source/sass/blocks/gum.scss
+++ b/source/sass/blocks/gum.scss
@@ -4,19 +4,22 @@
 }
 
 .gum__container {
-  display: flex;
-  flex-wrap: wrap;
-  max-width: 1237px;
   margin: 0 auto;
-  gap: 3%;
   padding-top: 120px;
   padding-bottom: 120px;
 
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1237px;
+  gap: 3%;
+  
+
   @include vp-1199 {
-    flex-direction: column;
-    align-items: center;
     padding-top: 100px;
     padding-bottom: 100px;
+
+    flex-direction: column;
+    align-items: center;
   }
 
   @include vp-767 {
@@ -26,16 +29,18 @@
 }
 
 .gum__description {
-  max-width: 355px;
   padding: 38px 0 20px 0;
   margin: 0 0 0 57px;
-
+  max-width: 355px;
+  
   @include vp-1199 {
     width: 100%;
     max-width: none;
     padding: 0;
+     margin: 0;
+
     text-align: center;
-    margin: 0;
+   
   }
 
   @include vp-767 {
@@ -55,13 +60,15 @@
 
   @include vp-1199 {
     margin: 0 14px 0 0;
+
     font-size: 42px;
     line-height: 50px;
   }
 
   @include vp-767 {
-    text-align: left;
     margin: 0 14px 6px 0;
+
+    text-align: left;
     font-size: 32px;
     line-height: 38px;
   }
@@ -82,13 +89,15 @@
   }
 
   @include vp-767 {
-    text-align: left;
     margin: 0 0 24px 0;
+
+    text-align: left;
   }
 }
 
 .gum__description p {
   margin: 0 0 8px 0;
+
   font-family: $ff-robotocondensed;
   font-style: normal;
   font-weight: 300;
@@ -103,9 +112,10 @@
 
   @include vp-767 {
     margin: 0;
-    text-align: left;
     width: 100%;
-    padding-right: 20px;
+    padding: 0 20px 0 0;
+    
+    text-align: left;
   }
 }
 
@@ -120,6 +130,7 @@
 .gum__image {
   height: 100%;
   margin-left: auto;
+
   background-color: $color-spindle;
 
   @include vp-1199 {
@@ -145,6 +156,7 @@
 .gum__video {
   margin: -112px 0 0 77px;
   width: 100%;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -207,28 +219,32 @@
   height: auto;
 
   @include vp-1199 {
-    aspect-ratio: 266/167;
     max-width: 100%;
     max-height: 100%;
     height: 21.7vw;
+
+    aspect-ratio: 266/167;
   }
 
   @include vp-767 {
     max-width: 100%;
     max-height: 100%;
-    aspect-ratio: 320/167;
     height: auto;
+    
+    aspect-ratio: 320/167;
   }
 }
 
 .gum__video-btn {
   position: absolute;
   content: "";
-  border: none;
-  background-color: inherit;
   width: 100px;
   height: 100px;
+
+  border: none;
+  background-color: inherit;
   background-image: url("../img/svg/video-btn.svg");
+  
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
