--- a/source/sass/blocks/slider-control.scss
+++ b/source/sass/blocks/slider-control.scss
@@ -16,12 +16,20 @@
   }
 }
 
+.slider-control__button-prev.is-not-js,
+.slider-control__button-next.is-not-js {
+  display: none;
+}
+
+
 .slider-control__button-prev svg {
   transform: rotate(180deg);
 }
 
 .slider-control__button-prev svg,
 .slider-control__button-next svg {
+  width: 20px;
+  height: 35px;
   fill: none;
   stroke: $color-dark-gray;
 
@@ -57,9 +65,62 @@
 }
 
 .slider-control .swiper-button-prev {
-  left: 0;
+  left: -22px;
+    top: 55%;
+
+    @include vp-1199 {
+    left: 26px;
+    top: 46%;
+
+  }
+
+    @include vp-767 {
+    left: 5px;
+    top: 48%;
+  }
 }
 
 .slider-control .swiper-button-next {
-  right: 0;
+  right: -22px;
+    top: 55%;
+
+  @include vp-1199 {
+    right: 26px;
+    top: 46%;
+}
+
+  @include vp-767 {
+    right: 5px;
+    top: 48%;
+  }
+}
+
+.slider-control.is-reviews .swiper-button-prev {
+  left: -5px;
+    top: 48.5%;
+
+    @include vp-1199 {
+    left: -17px;
+    top: 43.5%;
+  }
+
+  @include vp-767 {
+    left: -10px;
+    top: 48%;
+  }
+}
+
+.slider-control.is-reviews .swiper-button-next {
+  right: -5px;
+    top: 48.5%;
+
+    @include vp-1199 {
+    right: -17px;
+    top: 43.5%;
+  }
+
+  @include vp-767 {
+    right: -10px;
+    top: 48%;
+  }
 }
