--- a/source/sass/blocks/stocks.scss
+++ b/source/sass/blocks/stocks.scss
@@ -1,6 +1,7 @@
-.special__container {
+.stocks__container {
   padding-top: 149px;
   padding-bottom: 117px;
+  max-width: 1240px;
 
   @include vp-1199 {
     padding-top: 91px;
@@ -9,14 +10,14 @@
 
   @include vp-767 {
     padding-top: 65px;
-    padding-bottom: 63px;
+    padding-bottom: 62px;
   }
 }
 
-.special h2 {
-  margin-top: 0;
-  margin-bottom: 33px;
-  //font-family: $ff-alumni;
+.stocks h2 {
+  margin: 0 0 33px;
+
+  font-family: $ff-alumnisans;
   font-weight: 600;
   font-size: 54px;
   line-height: 65px;
@@ -24,22 +25,24 @@
   text-align: center;
 
   @include vp-1199 {
-    margin-left: -6px;
-    margin-bottom: 42px;
+    margin: 0 0 42px -6px;
+
     font-size: 42px;
     line-height: 50px;
   }
 
   @include vp-767 {
-    margin-bottom: 43px;
+    margin: 0 0 43px -6px;
+
     font-size: 32px;
     line-height: 38px;
   }
 }
 
-.special__list {
+.stocks__list {
   margin: 0;
   padding: 0;
+
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 40px;
@@ -56,111 +59,137 @@
   }
 }
 
-.special__item {
+.stocks__item {
+  padding: 22px 28px 28px;
+
   display: flex;
   flex-direction: column;
-  padding: 28px;
-  padding-top: 22px;
+
   border: 7px solid transparent;
-  //border-image: $red-to-blue-diagon;
+  border-image: linear-gradient(#d10a42, #00359f);
   border-image-slice: 1;
 
   @include vp-767 {
+    padding: 32px 39px 40px;
+
     align-items: center;
-    min-height: 211px;
-    padding: 39px;
-    padding-top: 33px;
     text-align: center;
-  }
-
-  &--main {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-row: 1/3;
-    padding: 0;
-    border: none;
-
-    @include vp-1199 {
-      width: 100%;
-      grid-template-columns: 0.7fr 1fr;
-      grid-column: 1/3;
-      grid-row: 1/2;
-    }
-
-    @include vp-767 {
-      display: flex;
-      flex-direction: column;
-      padding: 0;
-    }
-  }
-
-  & h3 {
-    margin-top: 0;
-    margin-bottom: 6px;
-    font-size: 26px;
-    line-height: 31px;
-    color: $color-resolution-blue;
-  }
-
-  & p {
-    margin: 0;
-    font-size: 16px;
-    line-height: 22px;
-    color: $color-resolution-blue;
   }
 }
 
-.special__item-content {
+.stocks__item-first {
+  padding: 0;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-row: 1/3;
+  border: none;
+
+  @include vp-1199 {
+    width: 100%;
+
+    grid-template-columns: 0.7fr 1fr;
+    grid-column: 1/3;
+    grid-row: 1/2;
+  }
+
+  @include vp-767 {
+    padding: 0;
+
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.stocks__item h3 {
+  margin: 0 0 6px;
+
+  font-size: 26px;
+  line-height: 31px;
+  color: $color-resolution-blue;
+}
+
+.stocks__item p {
+  margin: 0;
+
+  font-size: 16px;
+  line-height: 22px;
+  color: $color-resolution-blue;
+
+  @include vp-767 {
+    margin: 0 0 29px;
+  }
+}
+
+.stocks__description {
+  padding: 32px 45px 46px;
+
   display: flex;
   flex-direction: column;
-  background-color: $color-torch-red;
-  padding: 45px;
-  padding-top: 33px;
+  background-color: $color-of-torch-red;
 
   @include vp-767 {
     width: 100%;
-    min-height: 299px;
+
     align-items: center;
     text-align: center;
   }
 }
 
-.special__item-content h3 {
+.stocks__description h3 {
+  margin: 0 0 22px;
+
   display: flex;
   flex-direction: column;
-  margin: 0;
-  margin-bottom: 22px;
+
   font-size: 28px;
   line-height: 44px;
   color: $color-default-white;
 
   @include vp-767 {
-    margin-bottom: 16px;
+    margin: 0 0 16px;
   }
 }
 
-.special__item-content span {
+.stocks__description span {
   font-size: 70px;
   line-height: 62px;
 }
 
-.special__item-content p {
-  margin: 0;
+.stocks__item-first .stocks__description > p {
+  margin: 0 0 31px;
+
   font-size: 18px;
   line-height: 25px;
   color: $color-default-white;
 }
 
-.special__item-content .special__link {
+.stocks__description .stocks__btn {
   font-size: 14px;
   line-height: 16px;
   color: $color-default-white;
   border-bottom: 1px solid $color-default-white;
+
+  &:hover,
+  &:active,
+  &:focus {
+    color: $color-sapphire;
+    border-bottom: 1px solid $color-sapphire;
+  }
+
+  &:focus {
+    color: $color-sapphire;
+    border: 1px solid $color-sapphire;
+    outline: none;
+  }
 }
 
-.special__link {
+.stocks__btn {
+  margin: auto 0 0 0;
+  padding: 0;
+
   align-self: flex-start;
-  margin-top: auto;
+
   font-weight: 700;
   font-size: 12px;
   line-height: 14px;
@@ -168,52 +197,51 @@
   color: $color-resolution-blue;
   text-transform: uppercase;
   border-bottom: 1px solid $color-resolution-blue;
-  transition: color, border-color $trans-default;
+  background: transparent;
+
+  &:hover,
+  &:active,
+  &:focus {
+    color: $color-of-torch-red;
+    border-bottom: 1px solid $color-of-torch-red;
+  }
+
+  &:focus {
+    color: $color-of-torch-red;
+    border: 1px solid $color-of-torch-red;
+    outline: none;
+    line-height: 13px;
+  }
 
   @include vp-767 {
-    margin: auto;
-    margin-bottom: 0;
-  }
-
-  @include hover-focus {
-    color: $color-torch-red;
-    border-color: $color-torch-red;
+    margin: 0 auto;
   }
 }
 
-.special__image-wrapper {
-  position: relative;
-  min-width: 280px;
-  width: 100%;
+.stocks__image-wrapper {
+  display: inline-table;
+  vertical-align: middle;
 
-  &::after {
-    content: "";
-    display: block;
-    padding-bottom: 165%;
-
-    @include vp-1199 {
-      padding-bottom: 115.8%;
-    }
-
-    @include vp-767 {
-      padding-bottom: 103%;
-    }
+  @include vp-767 {
+    width: 100%;
   }
 }
 
-.special__image {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+.stocks__image {
   width: 100%;
   height: 100%;
+  aspect-ratio: 280/462;
+
   object-fit: cover;
   background-color: $color-egyptian-blue;
   object-position: 35%;
 
   @include vp-1199 {
+    aspect-ratio: 399/462;
     object-position: top;
+  }
+
+  @include vp-767 {
+    aspect-ratio: 290/298;
   }
 }
