--- a/source/sass/blocks/trainers.scss
+++ b/source/sass/blocks/trainers.scss
@@ -44,19 +44,19 @@
   width: 100%;
 }
 
-.trainers__slider--not-js .trainers__list {
+.trainers__slider.is-not-js .trainers__list {
   display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 40px;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px;
 
-    @include vp-1199 {
-      grid-template-columns: repeat(2, 1fr);
-      gap: 30px;
-    }
+  @include vp-1199 {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+  }
 
-    @include vp-767 {
-      grid-template-columns: 1fr;
-    }
+  @include vp-767 {
+    grid-template-columns: 1fr;
+  }
 }
 
 .trainers__list {
@@ -196,31 +196,6 @@
     background-color: $color-default-white;
     border-radius: 50%;
   }
-}
-
-.trainers__slider-control {
-  position: absolute;
-  top: 53%;
-  left: -23px;
-  right: -23px;
-  display: flex;
-  justify-content: space-between;
-
-  @include vp-1199 {
-    top: 46%;
-    left: 3.6%;
-    right: 3.6%;
-  }
-
-  @include vp-767 {
-    top: 48%;
-    left: 5px;
-    right: 5px;
-  }
-}
-
-.trainers__slider-control--not-js {
-  display: none;
 }
 
 .trainers__image {
