--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,6 +32,7 @@
 @import "blocks/slider-control";
 @import "blocks/features";
 @import "blocks/stocks";
+@import "blocks/reviews";
 
 // ---------------------------------
 
