--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -33,6 +33,9 @@
 @import "blocks/features";
 @import "blocks/stocks";
 @import "blocks/reviews";
+@import "blocks/contacts-form";
+@import "blocks/free-class";
+@import "blocks/contacts";
 
 // ---------------------------------
 
