--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -17,12 +17,13 @@ $color-egyptian-blue: #103aae;
 $color-whisper: #e8e8e8;
 $color-dark-gray: #afafaf;
 $color-resolution-blue: #1c3374;
+$color-light-slate-grey: #74819c;
 $color-resolution-blue02: rgb(28, 51, 116, 0.2);
 $color-persian-blue: #2e35ac;
 $color-grey-opacity02: rgba(120, 120, 120, 0.2);
 $color-tabs: rgba(16, 38, 84, 0.5);
 $color-filter: rgba(20, 54, 122, 0.5);
-$color-transparent:   rgba(255, 255, 255, 0);
+$color-transparent: rgba(255, 255, 255, 0);
 
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
