для самостоятельной проверки проекта

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,5 +1,5 @@
 .contacts {
-   padding: 56px 30px 64px 120px;
+  padding: 56px 30px 64px 120px;
 
   flex: 0 0 50%;
 
@@ -9,11 +9,7 @@
     padding: 62px 15px 65px;
     width: 100%;
 
-    //display: flex;
-    //justify-content: center;
-
     border-top: none;
-    //flex: auto;
   }
 
   @include vp-767 {
@@ -26,13 +22,9 @@
 }
 
 .contacts__wrapper {
-  //min-width: max-content;
   width: 100%;
-  //max-width: 404px;
 
   @include vp-1199 {
-    //max-width: 472px;
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -64,11 +56,14 @@
     align-self: flex-start;
 
     font-size: 42px;
-line-height: 50px;
+    line-height: 50px;
   }
 
   @include vp-767 {
-    margin-bottom: 34px;
+    margin: 0 0 34px;
+
+    font-size: 32px;
+    line-height: 38px;
   }
 }
 
@@ -93,6 +88,8 @@ line-height: 50px;
   }
 
   @include vp-767 {
+    margin: 0;
+
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -125,19 +122,6 @@ line-height: 50px;
   width: 100%;
 }
 
-.contacts__item:nth-child(even) {
-  //padding-left: 61px;
-
-  @include vp-1199 {
-    //padding-left: 30px;
-  }
-
-  @include vp-767 {
-    padding-left: 0;
-  }
-}
-
-
 .contacts__item h3 {
   margin: 0;
 
@@ -145,8 +129,6 @@ line-height: 50px;
   font-size: 16px;
   line-height: 1.5;
   color: $color-sapphire;
-  //max-width: fit-content;
-
 
   @include vp-1199 {
     margin: 0 0 5px;
@@ -199,17 +181,7 @@ line-height: 50px;
   }
 }
 
-.contacts__item--address {
-  //order: auto;
-
-  @include vp-767 {
-    order: 1;
-  }
-}
-
 .contacts__item-phone {
-  //order: auto;
-
   @include vp-767 {
     order: 3;
   }
@@ -219,17 +191,7 @@ line-height: 50px;
   margin: 0 0 3px;
 }
 
-.contacts__item--schedule {
-  //order: auto;
-
-  @include vp-767 {
-    order: 2;
-  }
-}
-
 .contacts__item-email {
-  //order: auto;
-
   @include vp-767 {
     order: 4;
   }
