--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -32,14 +32,14 @@
   text-align: center;
 
   @include vp-1199 {
-    margin: 0 23px 0px 0;
+    margin: 0 23px 0 0;
 
     font-size: 42px;
     line-height: 50px;
   }
 
   @include vp-767 {
-    margin: 0 18px 0px 0;
+    margin: 0 18px 0 0;
 
     font-size: 32px;
     line-height: 38px;
