--- a/source/sass/blocks/free-class.scss
+++ b/source/sass/blocks/free-class.scss
@@ -8,6 +8,12 @@
   @include vp-1199 {
     padding: 61px 100px 42px 132px;
   }
+
+  @include vp-767 {
+    padding: 64px 15px 70px;
+
+    flex: 0 0 0;
+  }
 }
 
 .free-class h2 {
@@ -26,15 +32,14 @@
     font-size: 42px;
     line-height: 50px;
     font-weight: 700;
-
-    //max-width: fit-content;
   }
 
   @include vp-767 {
+    margin: 0 0 35px;
+
     font-size: 32px;
     line-height: 38px;
     font-weight: 600;
-    margin-bottom: 0;
   }
 }
 
@@ -50,7 +55,6 @@
   }
 
   @include vp-767 {
-    //width: 100%;
     margin: 0 auto;
     max-width: 100%;
   }
@@ -65,6 +69,12 @@
   @include vp-1199 {
     margin: 0 0 29px;
   }
+
+  @include vp-767 {
+    margin: 0 0 40px;
+
+    flex-direction: column;
+  }
 }
 
 .free-class__form label {
@@ -76,6 +86,10 @@
 
   @include vp-1199 {
     margin: 0 64px 0 0;
+  }
+
+  @include vp-767 {
+    margin: 0 0 32px;
   }
 }
 
