--- a/source/sass/blocks/gum.scss
+++ b/source/sass/blocks/gum.scss
@@ -6,13 +6,12 @@
 .gum__container {
   margin: 0 auto;
   padding-top: 120px;
-  padding-bottom: 120px;
+  padding-bottom: 118px;
 
   display: flex;
   flex-wrap: wrap;
   max-width: 1237px;
   gap: 3%;
-  
 
   @include vp-1199 {
     padding-top: 100px;
@@ -24,7 +23,7 @@
 
   @include vp-767 {
     gap: 33px;
-    padding: 63px 0 70px;
+    padding: 63px 0 69px;
   }
 }
 
@@ -32,15 +31,14 @@
   padding: 38px 0 20px 0;
   margin: 0 0 0 57px;
   max-width: 355px;
-  
+
   @include vp-1199 {
     width: 100%;
     max-width: none;
     padding: 0;
-     margin: 0;
+    margin: 0;
 
     text-align: center;
-   
   }
 
   @include vp-767 {
@@ -114,7 +112,7 @@
     margin: 0;
     width: 100%;
     padding: 0 20px 0 0;
-    
+
     text-align: left;
   }
 }
@@ -163,11 +161,11 @@
   position: relative;
 
   @include vp-1199 {
-    margin: -84px 0 0 0px;
+    margin: -84px 0 0 0;
   }
 
   @include vp-767 {
-    margin: 8px 0 0 0px;
+    margin: 8px 0 0 0;
   }
 }
 
@@ -230,7 +228,7 @@
     max-width: 100%;
     max-height: 100%;
     height: auto;
-    
+
     aspect-ratio: 320/167;
   }
 }
@@ -244,7 +242,7 @@
   border: none;
   background-color: inherit;
   background-image: url("../img/svg/video-btn.svg");
-  
+
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
