--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,9 +1,9 @@
 .promo {
-  padding-top: 19px;
+  padding-top: 21px;
   padding-bottom: 77px;
 
   @include vp-1199 {
-    padding: 39px 0 70px;
+    padding: 45px 0 70px;
   }
 
   @include vp-767 {
@@ -14,6 +14,7 @@
 .promo__container {
   margin: 0 auto;
   max-width: 1244px;
+
   display: flex;
   justify-content: center;
 
@@ -93,6 +94,7 @@
 .promo__list {
   margin: 0 0 15px 21px;
   padding: 0;
+
   list-style-type: none;
   display: flex;
   flex-direction: column;
@@ -103,10 +105,11 @@
 }
 
 .promo__item p {
+  padding: 0 0 3px 0;
+
   display: flex;
   flex-wrap: wrap;
   gap: 3px;
-  padding: 0 0 3px 0;
 
   @include vp-1199 {
     padding: 0 0 1px 0;
@@ -125,7 +128,7 @@
 
   @include vp-767 {
     margin: 0 0 -4px;
-    padding: 0 0 0px;
+    padding: 0 0 0;
   }
 }
 
@@ -147,6 +150,7 @@
 
 .promo__date-number {
   display: flex;
+
   font-weight: 700;
   font-size: 40px;
   line-height: 110%;
@@ -170,10 +174,12 @@
 }
 
 .promo__date-month {
+  padding: 4px 0 0 5px;
+
   display: flex;
+
   flex-direction: column;
   font-size: 14px;
-  padding: 4px 0 0 5px;
 
   @include vp-1199 {
     padding: 0;
@@ -190,6 +196,7 @@
 
   @include vp-1199 {
     margin: -3px 0 0 0;
+
     font-size: 10px;
   }
 }
@@ -205,6 +212,7 @@
   text-transform: uppercase;
   background: transparent;
   border: 4px solid $color-default-white;
+
   grid-column: 1/-1;
 
   &:hover,
@@ -258,6 +266,7 @@
 .promo__image {
   width: 100%;
   height: 100%;
+
   object-fit: cover;
   aspect-ratio: 660/500;
 
