--- a/source/sass/blocks/tabs.scss
+++ b/source/sass/blocks/tabs.scss
@@ -1,10 +1,12 @@
 .tabs__list {
+  margin: 0 0 38px 0;
+  padding: 0 0 13px 0;
+
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 46px;
-  margin: 0 0 38px 0;
-  padding: 0 0 13px 0;
+
   position: relative;
 
   @include vp-1199 {
@@ -19,6 +21,8 @@
 }
 
 .tabs__item a {
+  margin: 0;
+
   font-family: $ff-robotocondensed;
   font-style: normal;
   font-weight: 400;
@@ -26,13 +30,16 @@
   line-height: 1.5;
   color: $color-tabs;
   text-align: center;
-  margin: 0;
   cursor: pointer;
 
   &:hover,
-  &:focus,
   &:active {
     color: $color-sapphire;
+  }
+
+  @include focus {
+    color: $color-sapphire;
+    outline: none;
   }
 
   @include vp-1199 {
@@ -44,19 +51,13 @@
   }
 }
 
-.tabs__item a {
-  @include focus {
-    color: $color-sapphire;
-  outline: none
-  }
-
-}
-
 .tabs__list::before {
   content: "";
   width: 341px;
   height: 2px;
+
   background-color: $color-grey-opacity02;
+
   position: absolute;
   bottom: 0;
 
