--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -36,6 +36,8 @@
 @import "blocks/contacts-form";
 @import "blocks/free-class";
 @import "blocks/contacts";
+@import "blocks/main-footer";
+@import "blocks/social";
 
 // ---------------------------------
 
