--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -18,6 +18,7 @@ $color-whisper: #e8e8e8;
 $color-dark-gray: #afafaf;
 $color-resolution-blue: #1c3374;
 $color-light-slate-grey: #74819c;
+$color-black-russian: #030a1a;
 $color-resolution-blue02: rgb(28, 51, 116, 0.2);
 $color-persian-blue: #2e35ac;
 $color-grey-opacity02: rgba(120, 120, 120, 0.2);
