--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -104,63 +104,6 @@
   }
 }
 
-.promo__item p {
-  padding: 0 0 3px 0;
-
-  display: flex;
-  flex-wrap: wrap;
-  gap: 3px;
-
-  @include vp-1199 {
-    padding: 0 0 1px 0;
-  }
-}
-
-.promo__item .promo__date {
-  padding: 0 0 3px;
-
-  border-bottom: 1px solid #ffffff;
-
-  @include vp-1199 {
-    margin: 0 0 2px 0;
-    padding: 0 0 1px 0;
-  }
-
-  @include vp-767 {
-    margin: 0 0 -4px;
-    padding: 0 0 0;
-  }
-}
-
-.promo__date--first {
-  max-width: 64px;
-
-  @include vp-1199 {
-    max-width: 42px;
-  }
-}
-
-.promo__item .promo__date--second {
-  max-width: 88px;
-
-  @include vp-767 {
-    margin: 0;
-  }
-}
-
-.promo__date-number {
-  display: flex;
-
-  font-weight: 700;
-  font-size: 40px;
-  line-height: 110%;
-  color: $color-default-white;
-
-  @include vp-1199 {
-    font-size: 24px;
-  }
-}
-
 .promo__item-time {
   margin: 15px 0 0 0;
 
@@ -173,7 +116,69 @@
   }
 }
 
-.promo__date-month {
+.promo__item h3,
+.promo__item p {
+  padding: 0 0 3px 0;
+
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3px;
+
+  @include vp-1199 {
+    padding: 0 0 1px 0;
+  }
+}
+
+.promo__item h3 {
+  margin: 0 auto 0 0;
+  max-width: 88px;
+
+  font-family: $ff-robotocondensed;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 150%;
+  color: $color-default-white;
+  border-bottom: 1px solid $color-default-white;
+
+  @include vp-1199 {
+    margin: 0 0 2px 0;
+    padding: 0 0 1px 0;
+
+    font-size: 12px;
+  }
+
+  @include vp-767 {
+    margin: 0 0 -4px;
+    padding: 0 0 0;
+  }
+}
+
+.promo__item-first h3 {
+  max-width: 64px;
+
+  @include vp-1199 {
+    max-width: 42px;
+  }
+}
+
+.promo__item b {
+  display: flex;
+
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 110%;
+  color: $color-default-white;
+
+  @include vp-1199 {
+    font-size: 24px;
+  }
+}
+
+.promo__item-time b {
+  margin: 4px 0 0 0;
+}
+
+.promo__item span:first-of-type {
   padding: 4px 0 0 5px;
 
   display: flex;
@@ -187,12 +192,9 @@
   }
 }
 
-.promo__date-month span {
+.promo__item span:first-of-type > span {
   margin: -1px 0 0 0;
-
-  display: flex;
-  flex-direction: column;
-  font-size: 14px;
+  padding: 0;
 
   @include vp-1199 {
     margin: -3px 0 0 0;
