--- a/source/sass/blocks/nav-description.scss
+++ b/source/sass/blocks/nav-description.scss
@@ -107,7 +107,6 @@
   flex-direction: column;
   align-items: flex-end;
 
-
   @include vp-1199 {
     text-align: right;
     align-self: flex-end;
@@ -124,6 +123,9 @@
 
 .nav-description__item {
   width: max-content;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .nav-description__item a {
