--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -112,8 +112,8 @@
 
   @include vp-767 {
     margin: 0 0 0 14px;
-    max-width: 68px;
-    max-height: 68px;
+    width: 68px;
+    height: 68px;
 
     grid-row: 1/2;
     justify-self: flex-end;
