--- a/source/sass/blocks/gum.scss
+++ b/source/sass/blocks/gum.scss
@@ -6,12 +6,14 @@
 .gum__container {
   margin: 0 auto;
   padding-top: 120px;
-  padding-bottom: 118px;
+  padding-bottom: 233px;
 
   display: flex;
   flex-wrap: wrap;
+  align-items: flex-start;
   max-width: 1237px;
   gap: 3%;
+  position: relative;
 
   @include vp-1199 {
     padding-top: 100px;
@@ -152,16 +154,18 @@
 }
 
 .gum__video {
-  margin: -112px 0 0 77px;
   width: 100%;
 
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
+  position: absolute;
+  top: 407px;
 
   @include vp-1199 {
     margin: -84px 0 0 0;
+    position: relative;
+    top: 0;
   }
 
   @include vp-767 {
